Finished footer, homepage, registration and logistics. Dummy content in other pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,28 @@
-  <footer class="page-footer  grey darken-3">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">The Committee on World Food Security (CFS)</h5>
-          <p class="grey-text text-lighten-4">The Committee on World Food Security (CFS) is the foremost inclusive international and intergovernmental platform for all stakeholders to work together to ensure food security and nutrition for all. CFS holds an annual Plenary session every October in FAO, Rome. </p>
-        </div>
-
-        <div class="col l6 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Twitter</a></li>
-            <li><a class="white-text" href="#!">Facebook</a></li>
-            <li><a class="white-text" href="#!">Medium</a></li>
-            <li><a class="white-text" href="#!">Email</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            <div>
-                Copyright © 2017 <a href="http://www.fao.org/cfs/" class="grey-text text-lighten-3">Committee on World Food Security (CFS)</a>
-            </div>
-        </div>
-    </div>
+<footer class="page-footer  grey darken-3">
+	<div class="container">
+		<div class="row">
+			<div class="col l6 s12">
+				<h5 class="white-text">The Committee on World Food Security (CFS)</h5>
+				<p class="grey-text text-lighten-4">The Committee on World Food Security (CFS) is the foremost inclusive international and intergovernmental platform for all stakeholders to work together to ensure food security and nutrition for all. CFS holds an annual Plenary session every October in FAO, Rome. </p>
+			</div>
+			<div class="col l6 s12">
+				<h5 class="white-text">Connect</h5>
+				
+				<a class="white-text" href="https://www.twitter.com/{{ site.author.twitter}}"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+				Twitter</a>
+				<a class="white-text" href="https://www.facebook.com/{{ site.author.facebook}}"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+				Facebook</a>         <a class="white-text" href="https://www.medium.com/@{{ site.author.medium}}"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>
+			Medium</a>
+			<a class="white-text" href="mailto:{{ site.author.email}}"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+			Email</a>
+		</div>
+	</div>
+</div>
+<div class="footer-copyright">
+	<div class="container">
+		<div>
+			Copyright © 2017 <a href="http://www.fao.org/cfs/" class="grey-text text-lighten-3">Committee on World Food Security (CFS)</a>
+		</div>
+	</div>
+</div>
 </footer>
