--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,12 @@ layout: default
     <div class="container">
       <br><br>
       <div class="row center">
-          <h1 class="green-text header center">{{ site.title }}</h1>
-          <h5 class="header col s12 light">{{ content }}</h5>
+          <strong><h1 class="green-text header center">{{ site.title }}</h1></strong>
+          <h5 class="col s12 light dark-grey">{{ content }}</h5>
       </div>
         
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light green">Register</a>
+        <a href="/registration/" id="download-button" class="btn-large waves-effect waves-light blue">Register</a>
       </div>
       <br><br>
 
