--- a/_layouts/logistics.html
+++ b/_layouts/logistics.html
@@ -1,19 +1,19 @@
 ---
-layout: page
-title: Logistics
-permalink: /logistics/
+layout: default
 ---
+<div class="container">
 <h1 class="page-title">{{ page.title | escape }}</h1>
 <div class="section">
+<h2>Meeting Venue</h2>
 	<div class="row">
 		<div class="col m8 s12">
 			<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=FAO+of+the+UN&amp;aq=&amp;sll=53.800651,-4.064941&amp;sspn=10.509332,19.753418&amp;ie=UTF8&amp;hq=FAO+of+the+UN&amp;t=m&amp;ll=41.882988,12.488965&amp;spn=0.016615,0.032015&amp;output=embed"></iframe><br />
 		</div>
 		<div class="col l4 m4 s12">
 			
-			<div class="card green lighten-2">
-				<div class="card-content white-text">
-					<span class="card-title">Useful links</span>
+			<div class="card grey lighten-3 blue-text text-darken-2">
+				<div class="card-content">
+					<span class="card-title ">Useful links</span>
 					<ul>
 						<li>
 							<a href="http://www.fao.org/fileadmin/templates/cfs/Docs1516/cfs43/CFS43_Green_Accomodation_Rome.jpg" target="_blank" title="Initiates file download">Eco-friendly accommodation in Rome</a>
@@ -44,9 +44,9 @@ permalink: /logistics/
 		
 	</div>
 </div>
-<div class="divider"></div>
-<div class="row">
-	<div class="col s12">
+</div>
+<div class="container">
 
-		</div>
-	</div>
+    {{ content }}
+
+</div>
