--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<div class="container">
+<h1 class="page-title">{{ page.title | escape }}</h1>
 
-    {{ content }}
-
+<div class="container full">
+            {{ content }}
 </div>
