--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<div class="loader"></div>
 <nav class="green" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" class="brand-logo" href="{{ "/" | relative_url }}">Logo</a>
     {% assign default_paths = site.pages | map: "path" %}
