--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,3 +1,13 @@
 .fa{
     margin: .5rem;
 }
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../assets/images/loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
+}
