Minor layout fixes

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -11,3 +11,6 @@
     background: url('../assets/images/loader.gif') 50% 50% no-repeat rgb(249,249,249);
     opacity: .8;
 }
+.tab-content{
+    margin: 20px 0;
+}
