One page timetable

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -22,11 +22,11 @@ h3 {font-size: 1.563em;}
 
 h4 {font-size: 1.25em;}
 
-.header {
-    font-size: 6rem;
-    font-weight: 500;
-    margin: 0;
-}
+// .header {
+//     font-size: 6rem;
+//     font-weight: 500;
+//     margin: 0;
+// }
 
 // nav ul a{
 //     color: $dark-grey;
