--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -1,8 +1,7 @@
-<div class="container head">
-    <div class="row">
+
+    <div class="row head">
         <div class="col s12">
-            <h1 class="header"> CFS 44</h1>
-            <h2> 9 - 13 October, Rome, Italy</h2>
+            <h1 class="header center white-text"> CFS 44</h1>
+            <h2 class="center white-text"> 9 - 13 October, Rome, Italy</h2>
         </div>
     </div>
-</div>
