--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -12,3 +12,13 @@
 .full{
     min-height: 60vh;
 }
+.head{
+    width: 100%;
+    min-height: 50vh;
+    background: $green;
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
