--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -1,7 +1,7 @@
 
     <div class="row head">
         <div class="col s12">
-            <h1 class="header center white-text"> CFS 44</h1>
-            <h2 class="center white-text"> 9 - 13 October, Rome, Italy</h2>
+            <h1 class="center title white-text"> CFS 44</h1>
+            <h2 class="center subtitle white-text"> 9 - 13 October, Rome, Italy</h2>
         </div>
     </div>
