--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -23,9 +23,15 @@ h3 {font-size: 1.563em;}
 h4 {font-size: 1.25em;}
 
 
-.header {
-    font-size: 6rem;
-    font-weight: 500;
+.title {
+    font-size: 7rem;
+    font-weight: 600;
+    margin: 0;
+}
+
+.subtitle {
+    font-size: 2.5rem;
+    font-weight: 100;
     margin: 0;
 }
 
