--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,6 +1,8 @@
+// GLOBAL COMPONENTS
 .fa{
     margin: .5rem;
 }
+
 .loader {
     position: fixed;
     left: 0px;
@@ -11,6 +13,23 @@
     background: url('../assets/images/loader.gif') 50% 50% no-repeat rgb(249,249,249);
     opacity: .8;
 }
+// HEAD PANEL 
+
+.head{
+    width: 100%;
+    min-height: 75vh;
+    background: url(../assets/images/pattern.png) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+// TABS
 .tab-content{
     margin: 20px 0;
 }
@@ -18,6 +37,7 @@
 .tabs .tab a{
     color: $green;
     font-size: 18px;
+    font-size: 500;
 }
 .tabs .tab a:hover,.tabs .tab a.active {
 	background-color:transparent;
@@ -38,18 +58,7 @@
     min-width: 18%;
 }
 
-
-.head{
-    width: 100%;
-    min-height: 80vh;
-    background: url(../assets/images/pattern.png) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    color: white;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+// CARDS
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating){
+    color: $green;
 }
