--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -20,3 +20,16 @@ $dark-grey: #9e9e9e;
 .blue-text{
     color: $blue !important;
 }
+.rotate {
+    /* Safari */
+    -webkit-transform: rotate(-90deg);
+    /* Firefox */
+    -moz-transform: rotate(-90deg);
+    /* IE */
+    -ms-transform: rotate(-90deg);
+    /* Opera */
+    -o-transform: rotate(-90deg);
+   /* Internet Explorer */
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+
+}
