Card title smaller when viewport is small

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -5,5 +5,16 @@
         margin: -5px 0;
         font-size: 14px;
     }
+    .card .card-content .card-title {
+    line-height: 24px;
+    }
+    .card .card-title{
+        font-size: 18px;
+    }
+    .card-image {
+    width: 70px;
+    }
+    
+    
 }
 
