--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 				<a class="white-text" href="https://www.facebook.com/{{ site.author.facebook}}"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
 				Facebook</a>         <a class="white-text" href="https://www.medium.com/@{{ site.author.medium}}"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>
 			Medium</a>
-			<a class="white-text" href="mailto:{{ site.author.email}}"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+			<a class="white-text" href="mailto:{{ site.email | encode_email }}"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
 			Email</a>
 		</div>
 	</div>
