--- a/_layouts/timetable.html
+++ b/_layouts/timetable.html
@@ -14,14 +14,11 @@ layout: default
           <li class="tab green-text col s2"><a class="green-text" href="#13Oct">13 Oct</a></li>
         </ul>
       </div>
-      <div id="9Oct" class="col s12 tab-content">
-        {% include nine.html %}
-      </div>
-      
+      <div id="9Oct" class="col s12 tab-content">{% include nine.html %}</div>
       <div id="10Oct" class="col s12 tab-content">{% include ten.html %}</div>
-      <div id="11Oct" class="col s12 tab-content">{% include ten.html %}</div>
-      <div id="12Oct" class="col s12 tab-content">{% include ten.html %}</div>
-      <div id="13Oct" class="col s12 tab-content">{% include ten.html %}</div>
+      <div id="11Oct" class="col s12 tab-content">{% include eleven.html %}</div>
+      <div id="12Oct" class="col s12 tab-content">{% include twelve.html %}</div>
+      <div id="13Oct" class="col s12 tab-content">{% include thirteen.html %}</div>
     </div>
 </div>
 </section>
