--- a/_includes/eleven.html
+++ b/_includes/eleven.html
@@ -1,4 +1,4 @@
-    {% for event in site.data.data %}
+    {% for event in site.data.data-min %}
     {% if event.day == "11-Oct"%}
 <div class="card horizontal">
     {% if event.event_type == "Session" %}
