Fontawesome as svg, centered event type

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,12 +8,22 @@
 			<div class="col l6 s12">
 				<h5 class="white-text">Connect</h5>
 				
-				<a class="white-text" href="https://www.twitter.com/{{ site.author.twitter}}"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+				<a class="white-text"   width="40px" href="https://www.twitter.com/{{ site.author.twitter}}">
+					<img class="social-icon" src="../assets/images/twitter.svg"></img>
+					
+					
 				Twitter</a>
-				<a class="white-text" href="https://www.facebook.com/{{ site.author.facebook}}"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-				Facebook</a>         <a class="white-text" href="https://www.medium.com/@{{ site.author.medium}}"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>
+				<a class="white-text" href="https://www.facebook.com/{{ site.author.facebook}}">
+				
+					<img class="social-icon" src="../assets/images/facebook.svg"></img>
+
+				Facebook</a>         <a class="white-text" href="https://www.medium.com/@{{ site.author.medium}}">
+										<img class="social-icon" src="../assets/images/medium.svg"></img>
+
 			Medium</a>
-			<a class="white-text" href="mailto:{{ site.email | encode_email }}"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+			<a class="white-text" href="mailto:{{ site.email | encode_email }}">					
+			<img class="social-icon" src="../assets/images/mail.svg"></img>
+
 			Email</a>
 		</div>
 	</div>
