--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,23 +7,15 @@
 			</div>
 			<div class="col l6 s12">
 				<h5 class="white-text">Connect</h5>
-				
 				<a class="white-text"   width="40px" href="https://www.twitter.com/{{ site.author.twitter}}">
-					<img class="social-icon" src="../assets/images/twitter.svg"></img>
-					
-					
-				Twitter</a>
+					<img alt="twitter" class="social-icon" src="../assets/images/twitter.svg"></img>Twitter</a>
 				<a class="white-text" href="https://www.facebook.com/{{ site.author.facebook}}">
-				
-					<img class="social-icon" src="../assets/images/facebook.svg"></img>
-
+					<img alt="facebook" class="social-icon" src="../assets/images/facebook.svg"></img>
 				Facebook</a>         <a class="white-text" href="https://www.medium.com/@{{ site.author.medium}}">
-										<img class="social-icon" src="../assets/images/medium.svg"></img>
-
+				<img alt="medium" class="social-icon" src="../assets/images/medium.svg"></img>
 			Medium</a>
-			<a class="white-text" href="mailto:{{ site.email | encode_email }}">					
-			<img class="social-icon" src="../assets/images/mail.svg"></img>
-
+			<a class="white-text" href="mailto:{{ site.email | encode_email }}">
+				<img alt="email" class="social-icon" src="../assets/images/mail.svg"></img>
 			Email</a>
 		</div>
 	</div>
