--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
     <title>{{ site.title | escape }}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <!--FAVICON -->
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <!--FRAMEWORK-->
@@ -14,9 +14,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}" />
     <!--GET SVGS IN--> 
-    <!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">-->
 
-    {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
-    {% endif %}
+
 </head>
