--- a/_includes/script.html
+++ b/_includes/script.html
@@ -10,3 +10,4 @@
 <script src="{{ "js/jquery.min.js" | relative_url }}"></script>
 <script src="{{ "js/materialize.min.js" | relative_url }}"></script>
 <script src="{{ "js/init.js" | relative_url }}"></script>
+<script src="{{ "js/modernizr-webp.js" | relative_url }}"></script>
